--- a/BlazorApp.Client/Client/wwwroot/index.html
+++ b/BlazorApp.Client/Client/wwwroot/index.html
@@ -13,6 +13,7 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <link href="_content/Syncfusion.Blazor.Themes/bootstrap4.css" rel="stylesheet" />
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -25,6 +26,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
 </body>
 
 </html>
